fix - guess name cta size on mobile

--- a/src/sass/och/_props.scss
+++ b/src/sass/och/_props.scss
@@ -185,6 +185,12 @@
     &.active {
       display: block;
     }
+
+    > a {
+      @media #{$mobile-only}{
+        @include font-size(12);
+      }
+    }
   }
 }
 
